--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -26,6 +26,7 @@ jobs:
         uses: actions/checkout@v1
 
       - name: Build, tag, and push image to Amazon ECR
+        uses: docker/build-push-action@v3
         id: build-image
         env:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
