--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -26,9 +26,12 @@ jobs:
         uses: actions/checkout@v1
 
       - name: Build, tag, and push image to Amazon ECR
-        uses: docker/build-push-action@v3
         id: build-image
         env:
-          registry: ${{ steps.login-ecr.outputs.registry }}
-          repository: mastodon
+          ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+          ECR_REPOSITORY: mastodon
           IMAGE_TAG: latest
+        run: |
+          docker build -f Dockerfile -t $ECR_REGISTRY/$ECR_REPOSITORY:latest .
+          docker push $ECR_REGISTRY/$ECR_REPOSITORY:latest
+          echo "::set-output name=image::$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
