--- a/config/settings.yml
+++ b/config/settings.yml
@@ -38,16 +38,16 @@ defaults: &defaults
   trendable_by_default: false
   crop_images: true
   notification_emails:
-    follow: true
+    follow: false
     reblog: false
     favourite: false
-    mention: true
-    follow_request: true
+    mention: false
+    follow_request: false
     digest: true
-    report: true
-    pending_account: true
-    trending_tag: true
-    appeal: true
+    report: false
+    pending_account: false
+    trending_tag: false
+    appeal: false
   always_send_emails: false
   interactions:
     must_be_follower: false
